--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
   copyright notice
 -->
 <head>
-	<title>example</title>
+	<title>Good webpage</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content and much more.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; any company name 2014</p>
 	</footer>
 </body>
 </html>
