mb conflicting changes simple.html

--- a/simple.html
+++ b/simple.html
@@ -19,6 +19,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content and much more.
+			conflicting changes in master
 		</p>
 	</main>
 	<footer class="container">
