adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -2,9 +2,10 @@
 <!--
   copyright notice
   adding changes before rebasing conflict
+  adding!!
 -->
 <head>
-	<title>example</title>
+	<title>example of git</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
