some minor change in simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <!--
   copyright notice
   adding changes before rebasing conflict
   adding!!
 -->
 <head>
-	<title>example of git</title>
+	<title>example of git stash</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,7 +19,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content and much more.
+			Just some content and much more...
 		</p>
 	</main>
 	<footer class="container">
