tag1.2 eg simple.html

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
   adding!!
 -->
 <head>
-	<title>example of git stash!!</title>
+	<title>example of git stash!!tag eg</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
